hphp/test/slow/hack-arrays/callable.php.expectf
====================================================
int(1)
====================================================
int(2)
====================================================
int(3)
====================================================
int(4)
====================================================
int(5)
====================================================
int(6)
====================================================
array(1) {
  [0]=>
  int(7)
}
====================================================
array(1) {
  [0]=>
  int(8)
}
====================================================

Fatal error: Invalid callable (array) in %s/callable.php on line 9
====================================================

Fatal error: Invalid callable (array) in %s/callable.php on line 9
====================================================

Warning: Invalid argument: function: not a valid callback array in %s/callable.php on line 10
NULL
====================================================

Warning: Invalid argument: function: not a valid callback array in %s/callable.php on line 10
NULL
====================================================

Warning: Invalid argument: function: not a valid callback array in %s/callable.php on line 11
NULL
====================================================

Warning: Invalid argument: function: not a valid callback array in %s/callable.php on line 11
NULL
====================================================

Warning: array_map() expects parameter 1 to be a valid callback in %s/callable.php on line 12
NULL
====================================================

Warning: array_map() expects parameter 1 to be a valid callback in %s/callable.php on line 12
NULL
====================================================

Fatal error: Invalid callable (array) in %s/callable.php on line 9
====================================================

Warning: Invalid argument: function: not a valid callback array in %s/callable.php on line 10
NULL
====================================================

Warning: Invalid argument: function: not a valid callback array in %s/callable.php on line 11
NULL
====================================================

Warning: array_map() expects parameter 1 to be a valid callback in %s/callable.php on line 12
NULL
